--- a/npcalc.css
+++ b/npcalc.css
@@ -27,7 +27,7 @@ h1 {
 
 }
 
-.header {
+.myHeader {
 	font-weight:bold;
 	color:#cc6600;
 	font-size:14px;
@@ -54,58 +54,6 @@ h1 {
 			text-align: left;
 		}
 
-		.title1 {
-			font-size: 12px;
-			font-weight: bold;
-			vertical-align: top;
-		}
-
-		.title2 {
-			font-size: 13px;
-			font-weight: bold;
-			vertical-align: top;
-		}
-		
-/*	.formtable {
-		border: 0;
-		cellpadding: 0;
-		cellspacing: 0;
-		width: 100%;
-	}
-		.formtable td {
-			padding-bottom: 15px;
-			margin: 0;
-    		padding: 0;
-    		text-align: center;
-		}
-
-		.summarytable td {
-			border-bottom: solid 1px #c7ddea;
-			padding: 6px 1px 7px 4px;
-		}
-
-		.boldtd {
-			font-weight: bold;
-			font-family: Arial;
-			font-size: 12px;
-			color: #336699;
-			width: 150px;
-		}
-
-
-html, body {
-    height: 100%;
-}
-
-html {
-    display: table;
-    margin: auto;
-}
-
-body {
-    display: table-cell;
-}
-*/
 
 #dv_npc_s1_t {
 	display: none;
