--- a/npcalc.css
+++ b/npcalc.css
@@ -91,4 +91,9 @@
 .npcalcShaded {
 	background-color: #E0E0E0;
 }
+
+.npcalcShadedPadded {
+	background-color: #E0E0E0;
+	padding: 5px;
+}
 </style>
